--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,22 @@
 <html>
+  <head>
+    <title>Popup</title>
+    <style>
+      button {
+        padding: 10px 20px;
+        font-size: 16px;
+      }
+      canvas {
+        display: block;
+        margin-top: 10px;
+      }
+    </style>
+  </head>
   <body>
     <h2>Upload Image</h2>
-    <input type="file" id="imageInput" accept="image/*">
+    <input type="file" id="imageInput" accept="image/*" />
+    <button id="myButton">Access Webcam</button>
+    <img id="savedImage" alt="Captured Image" />
     <script src="popup.js"></script>
   </body>
 </html>
