--- a/camera.html
+++ b/camera.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>Camera Access</title>
@@ -11,6 +10,7 @@
             padding: 10px 20px;
             font-size: 16px;
             margin-top: 10px;
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -18,6 +18,8 @@
     <h2>Camera Access</h2>
     <canvas id="videoCanvas" width="640" height="480"></canvas>
     <button id="captureButton">Capture Image</button>
+    <button id="saveButton" style="display:none;">Save Image</button>
+    <button id="cancelButton" style="display:none;">Cancel</button>
     <script src="camera.js"></script>
 </body>
 </html>
