--- a/popup.html
+++ b/popup.html
@@ -6,9 +6,17 @@
         padding: 10px 20px;
         font-size: 16px;
       }
-      canvas {
-        display: block;
+      #savedImages {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 10px;
         margin-top: 10px;
+      }
+      img {
+        width: 100%;
+        height: auto;
+        border: 1px solid #ccc;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
       }
     </style>
   </head>
@@ -16,7 +24,7 @@
     <h2>Upload Image</h2>
     <input type="file" id="imageInput" accept="image/*" />
     <button id="myButton">Access Webcam</button>
-    <img id="savedImage" alt="Captured Image" />
+    <div id="savedImages"></div>
     <script src="popup.js"></script>
   </body>
 </html>
