--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,25 @@
         gap: 10px;
         margin-top: 10px;
       }
+      .image-container {
+        position: relative;
+      }
       img {
         width: 100%;
         height: auto;
         border: 1px solid #ccc;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+      }
+      .overlay-buttons {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        gap: 10px;
+      }
+      .image-container:hover .overlay-buttons {
+        display: flex;
       }
     </style>
   </head>
